@@ -5,6 +5,7 @@ Release Notes - NHibernate.Validator - Version 1.2.0
 ** BREAKING CHANGES
     * Target framework .NET 3.5
     * Constraints moved in Constraints namespace.
+    * ValidatorMode values was changed (see NHibernate.Validator.Engine.ValidatorMode for reference)
 
 Release Notes - NHibernate.Validator - Version 1.0.0GA
 
